pkl-core/src/test/files/LanguageSnippetTests/input/errors/const/constModule2.pkl
class Foo {
  foo = module
}

foo = new Foo {}
